--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -9,3 +9,4 @@ $breakpoint-xl: 1280px;
 $breakpoint-lg: 1024px;
 $breakpoint-md: 768px;
 $breakpoint-sm: 530px;
+$breakpoint-xs: 380px;
